<resources>
    <string name="app_name">Gadgeothek-Android</string>
    <string name="overview">Overview</string>
    <string name="reservations">Reservations</string>
    <string name="reserve">Reserve</string>
    <string name="reserve_success">Your reservation was successful!</string>
    <string name="reserve_failure">Your reservation failed</string>
    <string name="reservation_ready">Ready to loan</string>
    <string name="reservation_date">Reserved on: </string>
    <string name="bring_back_date_text">To bring back by: </string>
    <string name="reservation_waiting_position">Waiting Position: </string>
    <string name="delete_reservation">Delete reservation</string>
    <string name="loans">Loans</string>
    <string name="loan">Loan</string>
    <string name="loan_success">Your loan was successful!</string>
    <string name="loan_failure">Your loan failed:</string>
    <string name="settings">Settings</string>
    <string name="username">User</string>
    <string name="password">Password</string>
    <string name="passwordrepeat">Repeat Password</string>
    <string name="passwordrepeat_conflict">Passwords don\'t match</string>
    <string name="notregistered">No account yet?</string>
    <string name="login">Login</string>
    <string name="login_failure">Login failed</string>
    <string name="logout">Logout</string>
    <string name="logout_failure">There was a problem with your logout</string>
    <string name="register">Register</string>
    <string name="register_failure">Registration failed</string>
    <string name="no_items_found">No Items Found</string>
    <string name="description">Description</string>
    <string name="producer">Manufacturer</string>
    <string name="condition">Condition</string>
    <string name="availability">Availability</string>
    <string name="price">Price</string>
    <string name="by">by</string>
    <string name="reservation_deletion_success">Successfully deleted reservation</string>
    <string name="select_pickup_date">Select pickup date</string>
    <string name="no_return_date">No return date defined</string>
    <string name="gadget_title">Gadget Name: </string>
    <string name="server_change">Change server</string>
    <string name="studentnumber">Student Number: </string>
    <string name="email">E-Mail</string>
</resources>
