<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_row="8"
    android:layout_column="2">

    <TextView
        android:id="@+id/producer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/producer" />

    <TextView
        android:id="@+id/producer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="1" />

    <TextView
        android:id="@+id/condition_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/condition" />

    <TextView
        android:id="@+id/condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="2" />

    <TextView
        android:id="@+id/availability_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/availability" />

    <TextView
        android:id="@+id/availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="3" />

    <TextView
        android:id="@+id/price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="4" />

    <TextView
        android:id="@+id/reservation_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/reservation_date"/>

    <TextView
        android:id="@+id/reservation_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="5"/>

    <TextView
        android:id="@+id/waiting_position_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/reservation_waiting_position"/>

    <TextView
        android:id="@+id/waiting_position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="6"
        />

    <Button
        android:id="@+id/loan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/loan" />
    <Button
        android:id="@+id/delete_reservation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="7"
        android:text="@string/delete_reservation" />

</GridLayout>