<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_column="2"
    android:layout_row="6"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_collapseMode="pin" />


    <TextView
        android:id="@+id/description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_row="5"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"/>

    <TextView
        android:id="@+id/producer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/producer"
        android:layout_row="1"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/producer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"/>

    <TextView
        android:id="@+id/condition_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/condition"
        android:layout_row="2"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"/>

    <TextView
        android:id="@+id/availability_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/availability"
        android:layout_row="3"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"/>

    <TextView
        android:id="@+id/price_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_row="4"
        android:layout_column="0"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        />

    <Button
        android:id="@+id/reserve_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserve"
        android:layout_row="5"
        android:layout_column="1"/>

    <Button
        android:id="@+id/loan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserve"
        android:layout_row="5"
        android:layout_column="1"/>
</GridLayout>