<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:columnCount="2"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center"
        android:rowCount="4">

        <TextView
            android:id="@+id/gadget_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/gadget_title" />

        <TextView
            android:id="@+id/gadget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_column="1"
            android:layout_row="0" />

        <TextView
            android:id="@+id/reservation_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/reservation_date" />

        <TextView
            android:id="@+id/reservation_date"
            android:layout_width="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1" />


        <TextView
            android:id="@+id/bring_back_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/bring_back_date_text" />

        <TextView
            android:id="@+id/bring_back_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/no_return_date" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_row="3"
            android:layout_columnSpan="2"
            android:background="#AAAAAAAA"
            android:layout_marginTop="5dp"
                />
    </GridLayout>

</RelativeLayout>