<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Gadgeothek"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="37dp"
        android:layout_marginStart="25dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/login_text"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/password_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginTop="37dp"
        android:layout_marginStart="25dp"
        android:text="@string/password" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_text"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/password_text"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/password_repeat_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_marginTop="37dp"
        android:layout_marginStart="25dp"
        android:text="@string/passwordrepeat" />


    <EditText
        android:id="@+id/register_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/password_text"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/new_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/password_repeat"
        android:layout_below="@+id/password_repeat_text"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/register" />


</RelativeLayout>